--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
 
     <div id="wrapper" style="display:none;">
         <div id="infor">
-            <h2>Tên máy: HÀN MIG CO2 NC SUMIT</h2>
+            <h2>Tên máy: MÁY DẬP KIM LOẠI AIDA 60T </h2>
             <ul>
-                <li>Mã tài sản: WRI350-01-120</li><br>
-                <li>Tính năng: Hàn CO2</li><br>
-                <li>Nhãn hiệu: Sasi tự chế</li><br>
+                <li>Mã tài sản: MÁY DẬP JH21-110</li><br>
+                <li>Tính năng: Dập</li><br>
+                <li>Nhãn hiệu: AIDA</li><br>
                 <li>
                     <input type="button" value="Thông số nhà sản xuất" onclick="hien()" readonly />
                     <div id="hide" class="hidden">
-                        <p>Model: Không tìm thấy</p>
-                        <p>Năm sản xuất: 2020</p>
-                        <p>Nước sản xuất: Việt Nam</p>
-                        <p>Chiều dài: 3800</p>
+                        <p>Model: JH21-110</p>
+                        <p>Năm sản xuất: 2022 </p>
+                        <p>Nước sản xuất: Trung Quốc                    </p>
+                        <p>Chiều dài: 1800</p>
                         <p>Chiều rộng: 1600</p>
-                        <p>Chiều cao: 1800</p>
-                        <p>Trọng lượng tĩnh: 0</p>
-                        <p>Lực dập tải động: 0</p>
-                        <p>Công năng sử dụng: 0</p>
-                        <p>Công suất điện: 0</p>
-                        <p>Dòng 3 pha 380: 0</p>
-                        <p>Dòng 3 pha 220V: 1 pha 220</p>
+                        <p>Chiều cao: 3000</p>
+                        <p>Trọng lượng tĩnh: 12000</p>
+                        <p>Lực dập tải động: 110000</p>
+                        <p>Công năng sử dụng: Die height 350-270</p>
+                        <p>Công suất điện: 11</p>
+                        <p>Dòng 3 pha 380: Yes</p>
+                        <p>Dòng 3 pha 220V: 0</p>
                     </div>
                 </li>
             </ul>
